--- a/_posts/2000-01-06-examples.md
+++ b/_posts/2000-01-06-examples.md
@@ -7,13 +7,13 @@ fa-icon: image
 
 
 <div>
-<img class="row small column"   src="./assets/samples/author.png" alt="1" title="1" />
-<img class="row small column"   src="./assets/samples/author.png" alt="2" title="2" />
-<img class="row small column"   src="./assets/samples/author.png" alt="3" title="3" />
-<img class="row small column"   src="./assets/samples/author.png" alt="4" title="4" />
-<img class="row small column"   src="./assets/samples/author.png" alt="5" title="5" />
-<img class="row small column"   src="./assets/samples/author.png" alt="6" title="6" />
-<img class="row small column"   src="./assets/samples/author.png" alt="7" title="7" />
-<img class="row small column"   src="./assets/samples/author.png" alt="8" title="8" />
-<img class="row small column"   src="./assets/samples/author.png" alt="9" title="9" />
+<img class="row small column"   src="./assets/author.png" alt="1" title="1" />
+<img class="row small column"   src="./assets/author.png" alt="2" title="2" />
+<img class="row small column"   src="./assets/author.png" alt="3" title="3" />
+<img class="row small column"   src="./assets/author.png" alt="4" title="4" />
+<img class="row small column"   src="./assets/author.png" alt="5" title="5" />
+<img class="row small column"   src="./assets/author.png" alt="6" title="6" />
+<img class="row small column"   src="./assets/author.png" alt="7" title="7" />
+<img class="row small column"   src="./assets/author.png" alt="8" title="8" />
+<img class="row small column"   src="./assets/author.png" alt="9" title="9" />
 </div>
