--- a/_posts/2000-01-01-authors.md
+++ b/_posts/2000-01-01-authors.md
@@ -5,7 +5,7 @@ color: black
 style: center
 ---
 
-## Recurrent Instance-Aware Semantic Segmentation
+## Paper title
 {: .text-purple}
 
 <div class="author">
