--- a/_posts/2000-01-08-acks.md
+++ b/_posts/2000-01-08-acks.md
@@ -6,7 +6,7 @@ style: center
 fa-icon: thumbs-up
 ---
 
-We especially want to thank our technical support team:
+We want to thank our technical support team:
 
 <div class="author">
     <a href="https://imatge.upc.edu/web/people/albert-gil-moreno" target="_blank">
