Link to arXiv added.

--- a/_posts/2000-01-02-intro.md
+++ b/_posts/2000-01-02-intro.md
@@ -26,4 +26,4 @@ year = {2019}
 }
 </pre>
 
-Download our paper in pdf [here](https://github.com/imatge-upc/rvos/raw/master/rvos-2019-cvpr-cameraready.pdf).
+Download our paper in pdf [here](https://github.com/imatge-upc/rvos/raw/master/rvos-2019-cvpr-cameraready.pdf) or find it on [arXiv](https://arxiv.org/abs/1903.05612).
